--- a/qa/supply-chain/config.toml
+++ b/qa/supply-chain/config.toml
@@ -297,7 +297,7 @@ version = "0.1.12"
 criteria = "safe-to-deploy"
 
 [[exemptions.io-lifetimes]]
-version = "1.0.11"
+version = "1.0.9"
 criteria = "safe-to-deploy"
 
 [[exemptions.ipnet]]
@@ -504,10 +504,6 @@ criteria = "safe-to-deploy"
 version = "0.6.4"
 criteria = "safe-to-deploy"
 
-[[exemptions.rand_xorshift]]
-version = "0.3.0"
-criteria = "safe-to-deploy"
-
 [[exemptions.raw-cpuid]]
 version = "10.6.0"
 criteria = "safe-to-deploy"
@@ -546,6 +542,10 @@ criteria = "safe-to-deploy"
 
 [[exemptions.ripemd]]
 version = "0.1.3"
+criteria = "safe-to-deploy"
+
+[[exemptions.rustix]]
+version = "0.37.7"
 criteria = "safe-to-deploy"
 
 [[exemptions.rusty-fork]]
@@ -686,10 +686,6 @@ criteria = "safe-to-deploy"
 
 [[exemptions.unarray]]
 version = "0.1.4"
-criteria = "safe-to-deploy"
-
-[[exemptions.valuable]]
-version = "0.1.0"
 criteria = "safe-to-deploy"
 
 [[exemptions.wait-timeout]]
